--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
 .header-logo {
     font-size: 24px;
     color: #f9faf8;
+    font-weight: 700;
 }
 
 ul {
@@ -25,7 +26,7 @@ a {
 
 .company-title {
     font-size: 48px;
-    font-weight: bolder;
+    font-weight: 800;
     color: #f9faf8;
 }
 
@@ -34,13 +35,19 @@ a {
     color: #e5e7eb;
 }
 
+.header-features {
+    font-size: 36px;
+    font-weight:800;
+    color:#1f2937;
+}
+
 .quote {
     background-color: #e5e7eb;
 }
 
 .quote .text {
     font-size: 36px;
-    font-weight: light;
+    font-weight:300;
     font-style: italic;
     color: #1f2937;
 }
@@ -60,25 +67,37 @@ button {
     color: #f9faf8;
 }
 
-/* Flex 
+/* Flex */
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1;
+    width: 100%;
+}
 
 .header {
+    width: 100%;;
     display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /* margin: 0px 20px;
+    padding: 0px 10px; */
+}
+
+.header ul {
+    display: flex;
+    gap: 16px;
 }
 
 .hero {
+    width: 100%;
     display: flex;
+    justify-content: space-evenly;
 }
 
-.features {
-    display: flex;
+.hero img {
+    width: 250px;
+    height: auto;
 }
-
-.quote {
-    display: flex;
-}
-
-.subscription {
-    display: flex;
-}
-*/
