--- a/styles.css
+++ b/styles.css
@@ -51,13 +51,6 @@ a {
     color: #e5e7eb;
 }
 
-.header-features {
-    font-size: 36px;
-    font-weight:800;
-    color:#1f2937;
-    padding: 50px;
-}
-
 .intro {
     padding-left: 100px;
 }
@@ -76,9 +69,20 @@ a {
     padding-right: 100px;
 }
 
-.container img {
+.features {
+    padding-top: 40px;
+    padding-bottom: 80px;
+}
+
+.random-information {
+    font-size: 36px;
+    font-weight:800;
+    color:#1f2937;
+}
+
+.card {
     max-width: 250px;
-    height: auto;
+    text-align: center;
 }
 
 .quote {
@@ -167,6 +171,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 40px;
 }
 
 .container {
