--- a/styles.css
+++ b/styles.css
@@ -81,8 +81,13 @@ a {
 }
 
 .card {
-    max-width: 250px;
+    max-width: 200px;
     text-align: center;
+}
+
+.card img {
+    border: 2px solid #3882f6 ;
+    border-radius: 15px;
 }
 
 .quote {
@@ -176,7 +181,7 @@ body {
 
 .container {
     display: flex;
-    flex: 1;
+    gap: 40px;
 } 
 
 .card {
@@ -184,6 +189,7 @@ body {
     flex-direction: column;
     flex: 1;
     justify-content: baseline;
+    gap: 10px;
 }
 
 .quote {
