--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,7 @@ a {
     max-width: 75%;
     padding: 40px 60px;
     margin: 60px 0px;
+    border-radius: 10px;
 }
 
 .subscribe .sub-header {
